--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </div>
         
         <div class="stats-grid">
+            <div class="stat-card price-card">
+                <h3>💰 WLFI 价格</h3>
+                <p class="value" id="tokenPrice">加载中...</p>
+                <small class="price-change" id="priceChange">--</small>
+            </div>
             <div class="stat-card">
                 <h3>代币总供应量</h3>
                 <p class="value" id="totalSupply">加载中...</p>
